--- a/MVVMPattern-eCart/Storyboards/Base.lproj/Main.storyboard
+++ b/MVVMPattern-eCart/Storyboards/Base.lproj/Main.storyboard
@@ -30,7 +30,13 @@
                             <constraint firstAttribute="bottom" secondItem="4LY-iH-HOf" secondAttribute="bottom" id="l9x-ep-C15"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Products" id="NFs-qV-ZSz"/>
+                    <navigationItem key="navigationItem" title="Products" id="NFs-qV-ZSz">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="NIw-Aa-wQL">
+                            <connections>
+                                <action selector="addButtonTapped:" destination="BYZ-38-t0r" id="n1A-Xk-xBU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="productTableView" destination="4LY-iH-HOf" id="BVY-ID-Txb"/>
                     </connections>
@@ -38,6 +44,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1049.6183206106871" y="-2.1126760563380285"/>
+        </scene>
+        <!--Add View Controller-->
+        <scene sceneID="pWN-id-uRk">
+            <objects>
+                <viewController id="q16-Cr-LLe" customClass="AddViewController" customModule="MVVMPattern_eCart" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Hpc-b6-lv4">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Jnz-KX-1Kq"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aSN-EV-UOF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1750" y="-2"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="p8g-Sj-dSp">
